fix left class aligning to center

--- a/src/common.css
+++ b/src/common.css
@@ -24,7 +24,7 @@
 }
 
 .text-left {
-  text-align: center;
+  text-align: left;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1024px) {
